<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AppSistemaCompras!</string>
    <string name="app_name">Sistema de Comprras</string>
    <string name="bt_total_compra">Total de Comprras</string>
    <string name="item_1">(R$ 2,69)</string>
    <string name="item_2">(R$ 5,00)</string>
    <string name="item_3">(R$ 9,70)</string>
    <string name="item_4">(R$ 2,30)</string>
</resources>
